--- a/ClientApp/src/app/counter/counter.component.html
+++ b/ClientApp/src/app/counter/counter.component.html
@@ -2,7 +2,7 @@
 
 <p>This is a simple example of an Angular component(s).</p>
 
-<p aria-live="polite">Current count is: <strong>{{ currentCount }}</strong></p>
+<p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
 
-<button class="btn btn-primary" (click)="incrementCounter()">Hit it::</button>
+<button class="btn btn-primary" (click)="incrementCounter()">Increment</button>
 
